# mypylog

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
src/mypylog/: __init__.py  logger.py
