[project]
name = "mypylog"
version = "0.2.1"
description = "loguru + rich 조합 로거 - 객체 자동 pretty print"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypylog"]
